@@ -42,6 +42,7 @@ pef-config
 
 general
 -------
+--config-file manpage entry
 audit error message consistency in tool validate functions
 - exit(1) vs. exit(EXIT_FAILURE)
 audit error messages in command line parsing in all tools
